--- a/tes.html
+++ b/tes.html
@@ -8,6 +8,8 @@
         <h1>Nama : Kahar Muzakkar </h1>
         <h2>NIM : 60200116096</h2>
         <h2>Kelas : Teknik Informatika C</h2>
+        <p>Teknik Iformatika</p>
+        <p>UIN Alauddin Makassar</p>
 
 </body>
 </html>
